--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </style>
     <body>
 <h1>Wars Of All Time</h1>
-        <img src ='https://media1.picsearch.com/is?YYbuB9AyO5yjPvFD_sJTJNWDUv73CJSIA5EY56wIMJk&height=259'>
+        <ul>
+            <li><a href= '.arw'>American Revolutionary War</a></li>
+        </ul>
     </body>
 </html>
