--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     </style>
     <body>
 <h1>Wars Of All Time</h1>
+        <!-- This is the table of contents.-->
         <ul>
             <li><a href= '.arw'>American Revolutionary War</a></li>
+            <h2></h2>
         </ul>
     </body>
 </html>
