--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- This is the table of contents.-->
         <ul>
             <li><a href= '.arw'>American Revolutionary War</a></li>
-            <h2></h2>
-        </ul>
+            <ul>
+            <h2 class = 'arw'>The American Revolutinary War</h2>
     </body>
 </html>
