--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <title>War Info</title>
     </head>
     <style>
-        
+        p{
+            color:rgb(50, 12, 240);
+        }
+        body{
+        background-color:rgb(255, 0, 0);
+        }
     </style>
     <body>
 <h1>Wars Of All Time</h1>
