--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>War Info</title>
+        <title>Tech Fair 2020</title>
     </head>
     <style>
        p{
@@ -18,10 +18,17 @@
         <ul>
             <li><a href= '.arw'>American Revolutionary War</a></li>
             <ul>
+                <!-- This is the American Revoltionary War-->
             <h2 class = 'arw'>The American Revolutinary War</h2>
                 <p>The Revolutionary War (1775-83), also known as the American Revolution, arose from growing tensions between residents of Great Britain’s 13 North American colonies and the colonial government, which represented the British crown. Skirmishes between British troops and colonial militiamen in Lexington and Concord in April 1775 kicked off the armed conflict, and by the following summer, the rebels were waging a full-scale war for their independence. France entered the American Revolution on the side of the colonists in 1778, turning what had essentially been a civil war into an international conflict. After French assistance helped the Continental Army force the British surrender at Yorktown, Virginia, in 1781, the Americans had effectively won their independence, though fighting would not formally end until 1783.
 </p>
+                <!-- These are causes to American Revolutionary War-->
                 <h3>Causes To American Revolution</h3>
+                <ol>
+                    <li>Stamp Act of 1765
+                        <li>Townshend Tarrifs of of 1767
+                            <li>Tea Act of 1773
+                </ol>
     <a href ='https://www.history.com/topics/american-revolution/american-revolution-history'>Thanks to History.com
 </p>                
     </body>
