--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <!-- This is the American Revoltionary War-->
             <h2 class = 'arw'>The American Revolutinary War</h2>
-                <p>The Revolutionary War (American Revolutionary War)started in 1775 and ended in 1783. </p>
+                <p>The Revolutionary War (American Revolutionary War)started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer the war started. France entered in 1778 helping the colonists.</p>
                 <!-- These are causes to American Revolutionary War-->
                 <h3>Causes To American Revolution</h3>
                 <ol>
