--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
         }
     </style>
     <body>
-<h1>Wars Of All Time</h1>
+<h1>War Information for kids</h1>
         <!-- This is the table of contents.-->
         <ul>
             <li><a href= '.arw'>American Revolutionary War</a></li>
             <ul>
-                <!-- This is the American Revoltionary War-->
+                <!-- This is  Information for the American Revoltionary War-->
             <h2 class = 'arw'>The American Revolutinary War</h2>
                 <p>The Revolutionary War (American Revolutionary War)started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. </p>
                 <!-- These are causes to American Revolutionary War-->
                 <h3>Causes To American Revolution</h3>
+                <--These are the causes to the American Civil War-->
                 <ol>
                     <li>Stamp Act of 1765
                         <li>Townshend Tarrifs of of 1767
                             <li>Tea Act of 1773
                 </ol>
+                <!--This is my link to history.com.-->
     <a href ='https://www.history.com/topics/american-revolution/american-revolution-history'>Thanks to History.com
 </p>                
     </body>
