--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                 <!-- This is  Information for the American Revoltionary War-->
             <h2 class = 'arw'>The American Revolutinary War</h2>
                 <p>The Revolutionary War (American Revolutionary War)started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
-                <video src = "https://www.youtube.com/watch?v=gzALIXcY4pg" poster = 'TanneriteForBlog.jpeg'  width = '320' height = '240' controls preload> </video> 
+                <iframe width="420" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
+
 
                 <!-- These are causes to American Revolutionary War-->
                 <h3>Causes To American Revolution</h3>
