--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Tech Fair 2020</title>
     </head>
+    <!--CSS-->
     <style>
        p{
             color:rgb(50, 12, 240);
@@ -14,26 +15,26 @@
         }
     </style>
     <body>
+    <!--HTML-->
 <h1>War Information for kids</h1>
         <!-- This is the table of contents.-->
         <ul>
             <li><a href= '#arw'>American Revolutionary War</a></li>
             </ul>
                 <!-- This is  Information for the American Revoltionary War-->
-            <h2 class = 'arw'>The American Revolutinary War</h2>
-                <p>The Revolutionary War (American Revolutionary War)started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
-                <iframe width="420" height="315"
-src="https://www.youtube.com/embed/tgbNymZ7vqY">
-</iframe>
+            <h2 class = 'arw'>The American 
 
+                <p>If this video doRevolutinary War</h2>
+                <p>The Revolutionary War (American Revolutionary War)started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
 
                 <!-- These are causes to American Revolutionary War-->
                 <h3>Causes To American Revolution</h3>
-                <!--These are the causes to the American Civil War-->
                 <ol>
                     <li>Stamp Act of 1765
                         <li>Townshend Tarrifs of of 1767
                             <li>Tea Act of 1773
+                <li>
+                    <li>
                 </ol>
                 <!--This is my link to history.com.-->
     <a href ='https://www.history.com/topics/american-revolution/american-revolution-history'>Thanks to History.com</a>
