--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Tech Fair 2020</title>
+        <title>American Revolution</title>
     </head>
     <!--CSS-->
     <style>
@@ -16,26 +16,26 @@
     </style>
     <body>
     <!--HTML-->
-<h1>War Information for kids</h1>
+<h1>Mom</h1>
         <!-- This is the table of contents.-->
         <ul>
-            <li><a href= '#arw'>American Revolutionary War</a></li>
+            <li><a href= '.nfw'>Note from William</a></li>
+            <li><a href ='#nfj'></a>Note from John</li>
             </ul>
                 <!-- This is  Information for the American Revoltionary War-->
-            <h2 class = 'arw'>The American 
-Revolutionary War</h2>
-                <p>The Revolutionary War (American Revolutionary War) started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
+            <h2 class = '.nfw'>Note From William</h2>
+                <p>Dear Mom, <br>I hope you have had a good day so far. Today is a special day  for  you. I hope that it will be a easy day on you. I really just want you to have fun today. I have had fun with you today and am glad you stayed here with us. We had fun yesterday and will have fun today. I am happy that i have a awesome mom like you.</p>
 
                 <!-- These are causes to American Revolutionary War-->
-                <h3>Causes To American Revolution</h3>
-                <ol>
-                    <li>Stamp Act of 1765
-                        <li>Townshend Tarrifs of of 1767
-                            <li>Tea Act of 1773
-                <li>
-                    <li>
-                </ol>
-                <!--This is my link to history.com.-->
-    <a href ='https://www.history.com/topics/american-revolution/american-revolution-history'>Thanks to History.com</a>
+                <h3>Loving People:</h3>
+                <ul>
+                    <li>Your Sons
+                        <li>Your Husband
+                            <li>Your Mom
+                <li>Your Dad
+                    <li>Your Future Chinese Daughter
+                    <li>And More
+                </ul>
+<p> Thanks to Dad for his help in Breakfast!</p>
     </body>
 </html>
