--- a/index.html
+++ b/index.html
@@ -6,25 +6,31 @@
     </head>
     <!--CSS-->
     <style>
-       p{
-            color:rgb(50, 12, 240);
+         p{
+   
+            color:rgb(255, 255, 255);
            
-        }
+        } 
         body{
-        background-color:rgb(255, 0, 0);
+        background-color:rgb(0, 123, 255);
         }
     </style>
     <body>
     <!--HTML-->
-<h1>Mom</h1>
+<h1>Mother's Day, To Mom</h1>
+
+<h2>Table of Contents</h2>
         <!-- This is the table of contents.-->
         <ul>
-            <li><a href= '.nfw'>Note from William</a></li>
-            <li><a href ='#nfj'></a>Note from John</li>
+            <li><a href= '#nfw'>Note from William</a></li>
+            <li><a href ='#nfj'>Note From John</a></li>
+            <li><a href = '#bre'>Breakfast</a></li>
             </ul>
                 <!-- This is  Information for the American Revoltionary War-->
-            <h2 class = '.nfw'>Note From William</h2>
-                <p>Dear Mom, <br>I hope you have had a good day so far. Today is a special day  for  you. I hope that it will be a easy day on you. I really just want you to have fun today. I have had fun with you today and am glad you stayed here with us. We had fun yesterday and will have fun today. I am happy that i have a awesome mom like you.</p>
+            <h2 id = 'nfw'>Note From William</h2>
+                <p>Dear Mom, <br>I hope you have had a good day so far. Today is a special day  for  you. I hope that it will be a easy day on you. I really just want you to have fun today. I have had fun with you today and am glad you stayed here with us. We had fun yesterday and will have fun today. I am happy that I have an awesome mom like you.</p>
+                 <h2 id = 'nfj'>Note From John</h2>
+                 <p>I love you mom, you are the best. Happy Mother's Day mom.<br><br>Hugs and Kisses,<br><br>John</p>
 
                 <!-- These are causes to American Revolutionary War-->
                 <h3>Loving People:</h3>
@@ -33,9 +39,40 @@
                         <li>Your Husband
                             <li>Your Mom
                 <li>Your Dad
-                    <li>Your Future Chinese Daughter
+
                     <li>And More
                 </ul>
+                <h2 id = 'bre'>Breakfast</h2>
+                 <table>
+            <thead>
+                <tr>
+                    <th>Food</th>
+                    <th>Cook</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Biscuits</td>
+                    <td>William</td>
+                </tr>
+                <tr>
+                    <td>Grits</td>
+                    <td>Dad</td>
+                </tr>
+                <tr>
+                    <td>Sasuge</td>
+                    <td>Dad</td>
+                </tr>
+                <tr>
+                    <td>Bacon</td>
+                    <td>Dad</td>
+                </tr>
+                <tr>
+                    <td>Eggs</td>
+                    <td>Dad / William
+                </tr>
+            </tbody>
+        </table>
 <p> Thanks to Dad for his help in Breakfast!</p>
     </body>
 </html>
