--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>American Revolution</title>
+        <title>Happy Mother's Day</title>
     </head>
     <!--CSS-->
     <style>
