--- a/index.html
+++ b/index.html
@@ -2,77 +2,40 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Happy Mother's Day</title>
+        <title>Tech Fair 2020</title>
     </head>
     <!--CSS-->
     <style>
-         p{
-   
-            color:rgb(255, 255, 255);
+       p{
+            color:rgb(50, 12, 240);
            
-        } 
+        }
         body{
-        background-color:rgb(0, 123, 255);
+        background-color:rgb(255, 0, 0);
         }
     </style>
     <body>
     <!--HTML-->
-<h1>Mother's Day, To Mom</h1>
-
-<h2>Table of Contents</h2>
+<h1>War Information for kids</h1>
         <!-- This is the table of contents.-->
         <ul>
-            <li><a href= '#nfw'>Note from William</a></li>
-            <li><a href ='#nfj'>Note From John</a></li>
-            <li><a href = '#bre'>Breakfast</a></li>
+            <li><a href= '#arw'>American Revolutionary War</a></li>
             </ul>
                 <!-- This is  Information for the American Revoltionary War-->
-            <h2 id = 'nfw'>Note From William</h2>
-                <p>Dear Mom, <br>I hope you have had a good day so far. Today is a special day  for  you. I hope that it will be a easy day on you. I really just want you to have fun today. I have had fun with you today and am glad you stayed here with us. We had fun yesterday and will have fun today. I am happy that I have an awesome mom like you.</p>
-                 <h2 id = 'nfj'>Note From John</h2>
-                 <p>I love you mom, you are the best. Happy Mother's Day mom.<br><br>Hugs and Kisses,<br><br>John</p>
+            <h2 class = 'arw'>The American 
+Revolutionary War</h2>
+                <p>The Revolutionary War (American Revolutionary War) started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
 
                 <!-- These are causes to American Revolutionary War-->
-                <h3>Loving People:</h3>
-                <ul>
-                    <li>Your Sons
-                        <li>Your Husband
-                            <li>Your Mom
-                <li>Your Dad
-
-                    <li>And More
-                </ul>
-                <h2 id = 'bre'>Breakfast</h2>
-                 <table>
-            <thead>
-                <tr>
-                    <th>Food</th>
-                    <th>Cook</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Biscuits</td>
-                    <td>William</td>
-                </tr>
-                <tr>
-                    <td>Grits</td>
-                    <td>Dad</td>
-                </tr>
-                <tr>
-                    <td>Sasuge</td>
-                    <td>Dad</td>
-                </tr>
-                <tr>
-                    <td>Bacon</td>
-                    <td>Dad</td>
-                </tr>
-                <tr>
-                    <td>Eggs</td>
-                    <td>Dad / William
-                </tr>
-            </tbody>
-        </table>
-<p> Thanks to Dad for his help in Breakfast!</p>
+                <h3>Causes To American Revolution</h3>
+                <ol>
+                    <li>Stamp Act of 1765
+                        <li>Townshend Tarrifs of of 1767
+                            <li>Tea Act of 1773
+                <li>
+                    <li>
+                </ol>
+                <!--This is my link to history.com.-->
+    <a href ='https://www.history.com/topics/american-revolution/american-revolution-history'>Thanks to History.com</a>
     </body>
 </html>
