--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--Thanks to Khan Academy(https://www.khanacademy).
+Thanks to my broter, too, who helped me code lots of other projects.
+My Sources For Code:
+W3 Schools
+Khan Academy
+Code Academy
+-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -7,11 +14,11 @@
     <!--CSS-->
     <style>
        p{
-            color:rgb(50, 12, 240);
+            color:rgb(149, 0, 255);
            
         }
         body{
-        background-color:rgb(255, 0, 0);
+        background-color:rgb(10, 140, 247);
         }
     </style>
     <body>
@@ -22,7 +29,7 @@
             <li><a href= '#arw'>American Revolutionary War</a></li>
             </ul>
                 <!-- This is  Information for the American Revoltionary War-->
-            <h2 class = 'arw'>The American 
+            <h2 id= 'arw'>The American 
 Revolutionary War</h2>
                 <p>The Revolutionary War (American Revolutionary War) started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
 
@@ -32,9 +39,12 @@ Revolutionary War</h2>
                     <li>Stamp Act of 1765
                         <li>Townshend Tarrifs of of 1767
                             <li>Tea Act of 1773
-                <li>
-                    <li>
+                <li>The Boston Massacre
                 </ol>
+                <h2>The Vote For War</h2>
+                <p>The Secould Continental Congress voted in Philidelphia
+                    with 56 delagates
+                </p>
                 <!--This is my link to history.com.-->
     <a href ='https://www.history.com/topics/american-revolution/american-revolution-history'>Thanks to History.com</a>
     </body>
