--- a/index.html
+++ b/index.html
@@ -14,16 +14,25 @@ Code Academy
     <!--CSS-->
     <style>
        p{
-            color:rgb(149, 0, 255);
-           
+            color:rgb(13, 12, 13);
+            font-family:helvetica;
         }
         body{
         background-color:rgb(10, 140, 247);
         }
+        #arw{
+            text-align:center;
+        }
+        #wifk{
+            text-align:center;
+        }
+        #pgh1{
+            font-family:Garamond;
+        }
     </style>
     <body>
     <!--HTML-->
-<h1>War Information for kids</h1>
+<h1 id ='wifk'>War Information for kids</h1>
         <!-- This is the table of contents.-->
         <ul>
             <li><a href= '#arw'>American Revolutionary War</a></li>
@@ -31,7 +40,7 @@ Code Academy
                 <!-- This is  Information for the American Revoltionary War-->
             <h2 id= 'arw'>The American 
 Revolutionary War</h2>
-                <p>The Revolutionary War (American Revolutionary War) started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
+                <p id='pgh1'>The Revolutionary War (American Revolutionary War) started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
 
                 <!-- These are causes to American Revolutionary War-->
                 <h3>Causes To American Revolution</h3>
@@ -42,9 +51,7 @@ Revolutionary War</h2>
                 <li>The Boston Massacre
                 </ol>
                 <h2>The Vote For War</h2>
-                <p>The Secould Continental Congress voted in Philidelphia
-                    with 56 delagates
-                </p>
+                <p>The Secould Continental Congress voted in Philidephia to make a Continental Army. They also decided to have George Washington as the head. On June 17, 1775 the first major battle happened, the Battle of Bunker Hill.                 </p>
                 <!--This is my link to history.com.-->
     <a href ='https://www.history.com/topics/american-revolution/american-revolution-history'>Thanks to History.com</a>
     </body>
