--- a/index.html
+++ b/index.html
@@ -29,17 +29,22 @@ Code Academy
         #pgh1{
             font-family:Garamond;
         }
-    </style>
+        #arwpic{
+        
+        }
+        </style>
     <body>
     <!--HTML-->
 <h1 id ='wifk'>War Information for kids</h1>
         <!-- This is the table of contents.-->
         <ul>
             <li><a href= '#arw'>American Revolutionary War</a></li>
+            <img id='arwpic'src='https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwj7uaDb09riAhWoT98KHdnJCigQjRx6BAgBEAU&url=%2Furl%3Fsa%3Di%26source%3Dimages%26cd%3D%26ved%3D%26url%3Dhttps%253A%252F%252Fwww.history.com%252Ftopics%252Famerican-revolution%252Famerican-revolution-history%26psig%3DAOvVaw12tShqD-IUynF7ZuKwdqNj%26ust%3D1560109697867971&psig=AOvVaw12tShqD-IUynF7ZuKwdqNj&ust=1560109697867971'>
             </ul>
                 <!-- This is  Information for the American Revoltionary War-->
             <h2 id= 'arw'>The American 
 Revolutionary War</h2>
+
                 <p id='pgh1'>The Revolutionary War (American Revolutionary War) started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
 
                 <!-- These are causes to American Revolutionary War-->
