--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Code Academy
     <style>
        p{
             color:rgb(13, 12, 13);
-            font-family:helvetica;
+            font-family:Helvetica;
         }
         body{
         background-color:rgb(10, 140, 247);
@@ -39,8 +39,9 @@ Code Academy
         <!-- This is the table of contents.-->
         <ul>
             <li><a href= '#arw'>American Revolutionary War</a></li>
-            <img id='arwpic'src='https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwj7uaDb09riAhWoT98KHdnJCigQjRx6BAgBEAU&url=%2Furl%3Fsa%3Di%26source%3Dimages%26cd%3D%26ved%3D%26url%3Dhttps%253A%252F%252Fwww.history.com%252Ftopics%252Famerican-revolution%252Famerican-revolution-history%26psig%3DAOvVaw12tShqD-IUynF7ZuKwdqNj%26ust%3D1560109697867971&psig=AOvVaw12tShqD-IUynF7ZuKwdqNj&ust=1560109697867971'>
+            
             </ul>
+            <img src ='https://media3.picsearch.com/is?IRJagqwU16yj2e0HorX4CwpgA9tV8GntQ3nkrBWe4ds&height=230'>
                 <!-- This is  Information for the American Revoltionary War-->
             <h2 id= 'arw'>The American 
 Revolutionary War</h2>
@@ -56,7 +57,7 @@ Revolutionary War</h2>
                 <li>The Boston Massacre
                 </ol>
                 <h2>The Vote For War</h2>
-                <p>The Secould Continental Congress voted in Philidephia to make a Continental Army. They also decided to have George Washington as the head. On June 17, 1775 the first major battle happened, the Battle of Bunker Hill.                 </p>
+                <p>The Secould Continental Congress voted in Philidephia to make a Continental Army. They also decided to have George Washington as the head. On June 17, 1775 the first major battle happened, the Battle of Bunker Hill. The Battle of Bunker Hill was a Battle that caused many deaths.               </p>
                 <!--This is my link to history.com.-->
     <a href ='https://www.history.com/topics/american-revolution/american-revolution-history'>Thanks to History.com</a>
     </body>
