--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Code Academy
             font-family:Garamond;
         }
         #arwpic{
-        
+        float:left;
         }
         </style>
     <body>
@@ -41,7 +41,7 @@ Code Academy
             <li><a href= '#arw'>American Revolutionary War</a></li>
             
             </ul>
-            <img src ='https://media3.picsearch.com/is?IRJagqwU16yj2e0HorX4CwpgA9tV8GntQ3nkrBWe4ds&height=230'>
+            <img id = 'arwpic' src ='https://media3.picsearch.com/is?IRJagqwU16yj2e0HorX4CwpgA9tV8GntQ3nkrBWe4ds&height=230'>
                 <!-- This is  Information for the American Revoltionary War-->
             <h2 id= 'arw'>The American 
 Revolutionary War</h2>
