--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ Code Academy
             font-family:Garamond;
         }
         #arwpic{
-        float:left;
+              position:absolute;
+              top:80px;
+              left:125px;
         }
         </style>
     <body>
