--- a/index.html
+++ b/index.html
@@ -15,24 +15,31 @@ Code Academy
     <style>
        p{
             color:rgb(13, 12, 13);
-            font-family:Helvetica;
+            font-family:Cursive;
         }
         body{
         background-color:rgb(10, 140, 247);
         }
         #arw{
             text-align:center;
+            z-index: 1
         }
         #wifk{
             text-align:center;
         }
         #pgh1{
-            font-family:Garamond;
+            font-family:Cursive;
         }
         #arwpic{
               position:absolute;
-              top:80px;
+              top:50px;
               left:125px;
+              width: 95px
+             
+        }
+        #linkarw{
+            position: absolute
+            z-index: 1;
         }
         </style>
     <body>
@@ -40,7 +47,7 @@ Code Academy
 <h1 id ='wifk'>War Information for kids</h1>
         <!-- This is the table of contents.-->
         <ul>
-            <li><a href= '#arw'>American Revolutionary War</a></li>
+            <li><a id='linkarw' href= '#arw'>American Revolutionary War</a></li>
             
             </ul>
             <img id = 'arwpic' src ='https://media3.picsearch.com/is?IRJagqwU16yj2e0HorX4CwpgA9tV8GntQ3nkrBWe4ds&height=230'>
