--- a/index.html
+++ b/index.html
@@ -1,73 +1,28 @@
 <!DOCTYPE html>
-<!--Thanks to Khan Academy(https://www.khanacademy).
-Thanks to my broter, too, who helped me code lots of other projects.
-My Sources For Code:
-W3 Schools
-Khan Academy
-Code Academy
--->
+<!--Websites I Used For Help:
+Khan Acedmy, Wikipedia, and Us History.com-->
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Tech Fair 2020</title>
-    </head>
-    <!--CSS-->
-    <style>
-       p{
-            color:rgb(13, 12, 13);
-            font-family:Cursive;
-        }
-        body{
-        background-color:rgb(10, 140, 247);
-        }
-        #arw{
-            text-align:center;
-            z-index: 1
-        }
-        #wifk{
-            text-align:center;
-        }
-        #pgh1{
-            font-family:Cursive;
-        }
-        #arwpic{
-              position:absolute;
-              top:50px;
-              left:125px;
-              width: 95px
-             
-        }
-        #linkarw{
-            position: absolute
-            z-index: 1;
-        }
+        <title>Mobile History</title>
+        <style>
+           #h1{
+               text-align:center;
+           }
+           body{
+               background-color:rgb(25, 148, 230);
+           }
+          p{
+              font-family:cursive;
+          }  
         </style>
+    </head>
     <body>
-    <!--HTML-->
-<h1 id ='wifk'>War Information for kids</h1>
-        <!-- This is the table of contents.-->
+        <h1 id='h1'>Mobile History</h1>
         <ul>
-            <li><a id='linkarw' href= '#arw'>American Revolutionary War</a></li>
-            
-            </ul>
-            <img id = 'arwpic' src ='https://media3.picsearch.com/is?IRJagqwU16yj2e0HorX4CwpgA9tV8GntQ3nkrBWe4ds&height=230'>
-                <!-- This is  Information for the American Revoltionary War-->
-            <h2 id= 'arw'>The American 
-Revolutionary War</h2>
-
-                <p id='pgh1'>The Revolutionary War (American Revolutionary War) started in 1775 and ended in 1783. Skirmishes ( British men vs. colonial milita men) started in April 1775 and by the next summer then were in all out war. Then, France entered on the side of the colonists. Since France entered the war was now international. With Frane by our side Britain surrendered in Yorktown, Virgina on October 1781. Although the fighting didn't end till 1783.</p>
-
-                <!-- These are causes to American Revolutionary War-->
-                <h3>Causes To American Revolution</h3>
-                <ol>
-                    <li>Stamp Act of 1765
-                        <li>Townshend Tarrifs of of 1767
-                            <li>Tea Act of 1773
-                <li>The Boston Massacre
-                </ol>
-                <h2>The Vote For War</h2>
-                <p>The Secould Continental Congress voted in Philidephia to make a Continental Army. They also decided to have George Washington as the head. On June 17, 1775 the first major battle happened, the Battle of Bunker Hill. The Battle of Bunker Hill was a Battle that caused many deaths.               </p>
-                <!--This is my link to history.com.-->
-    <a href ='https://www.history.com/topics/american-revolution/american-revolution-history'>Thanks to History.com</a>
+            <li><a href = "#emh">Early Mobile History</a></li>
+        </ul>
+        <h2 id='emh'>Early Mobile History </h2>
+        <p>Spanish explorers found Mobile in the 1500s. At first the Spanish called Mobile Bay the Bay of the Holy Spirit. Only 27 years after America was found by Christopher </p>
     </body>
 </html>
