--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ Khan Acedmy, Wikipedia, and Us History.com-->
             <li><a href = "#emh">Early Mobile History</a></li>
         </ul>
         <h2 id='emh'>Early Mobile History </h2>
-        <p>Spanish explorers found Mobile in the 1500s. At first the Spanish called Mobile Bay the Bay of the Holy Spirit. Only 27 years after America was found by Christopher </p>
+        <p>Spanish explorers found Mobile in the 1500s. At first the Spanish called Mobile Bay the Bay of the Holy Spirit. Only 27 years after America was found by Christopher Columbus.</p>
     </body>
 </html>
