--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Khan Acedmy, Wikipedia, and Us History.com-->
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Mobile History</title>
+   <title><img src="assests/img/user-Hermosillo.png" ></img>Webnet</title>
         <style>
            #h1{
                text-align:center;
