--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Khan Acedmy, Wikipedia, and Us History.com-->
 <html>
     <head>
         <meta charset="utf-8">
-   <title><img src="assests/img/user-Hermosillo.png" ></img>Webnet</title>
+   <title>Mobile History</title>
         <style>
            #h1{
                text-align:center;
@@ -24,6 +24,6 @@ Khan Acedmy, Wikipedia, and Us History.com-->
         </ul>
         <h2 id='emh'>Early Mobile History </h2>
                 <p>Spanish explorers dicovered Mobile in the 1500s. At first the Spanish called Mobile Bay the Bay of the Holy Spirit. Mobile was discovered only 27 years after America was found by Christopher Columbus. Admiral Alvarez de Pineda became the first European to sail into Mobile Bay in 1516. It would take 20 years for a European to step in today's Alabama! </p>
-
+<link rel="shortcut icon" href="your_image_path_and_name.ico" />
     </body>
 </html>
