--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ Khan Acedmy, Wikipedia, and Us History.com-->
     <head>
         <meta charset="utf-8">
    <title>Mobile History</title>
-        <link http= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiFx6ZcAwu-XrqAbGxhgwrlfRy0WMQvMB3cWpfhxRO2sUKb5Ccqw">
-        <style>
+        <link rel="shortcut icon" href="https://cdn.sstatic.net/Sites/stackoverflow/img/favicon.ico?v=4f32ecc8f43d">
+        <head>
            #h1{
                text-align:center;
            }
