--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Khan Acedmy, Wikipedia, and Us History.com-->
    <title>Mobile History</title>
         <link rel="shortcut icon" href="https://cdn.sstatic.net/Sites/stackoverflow/img/favicon.ico?v=4f32ecc8f43d">
         <head>
+            <style>
            #h1{
                text-align:center;
            }
