--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Khan Acedmy, Wikipedia, and Us History.com-->
     <head>
         <meta charset="utf-8">
    <title>Mobile History</title>
-        <link rel="shortcut icon" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiFx6ZcAwu-XrqAbGxhgwrlfRy0WMQvMB3cWpfhxRO2sUKb5Ccqw">
+        <link rel="shortcut icon" href = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiFx6ZcAwu-XrqAbGxhgwrlfRy0WMQvMB3cWpfhxRO2sUKb5Ccqw">
         <head>
             <style>
            #h1{
