--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@ Khan Acedmy, Wikipedia, and Us History.com-->
         <meta charset="utf-8">
    <title>Mobile History</title>
         <link rel="shortcut icon" href = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiFx6ZcAwu-XrqAbGxhgwrlfRy0WMQvMB3cWpfhxRO2sUKb5Ccqw">
-        <head>
             <style>
            #h1{
                text-align:center;
@@ -25,7 +24,7 @@ Khan Acedmy, Wikipedia, and Us History.com-->
             <li><a href = "#emh">Early Mobile History</a></li>
         </ul>
         <h2 id='emh'>Early Mobile History </h2>
-                <p>Spanish explorers dicovered Mobile in the 1500s. At first the Spanish called Mobile Bay the Bay of the Holy Spirit. Mobile was discovered only 27 years after America was found by Christopher Columbus. Admiral Alvarez de Pineda became the first European to sail into Mobile Bay in 1516. It would take 20 years for a European to step in today's Alabama! </p>
+                <p>Spanish explorers dicovered Mobile in the 1500s. At first the Spanish called Mobile Bay the Bay of the Holy Spirit. Mobile was discovered only 27 years after America was found by Christopher Columbus. Admiral Alvarez de Pineda became the first European to sail into Mobile Bay in 1516. It would take 20 years for a European to step in today's Alabama! <br><br> In beetween 1539 and 1541 explorer, Hernando De Soto, looked aroud the area and</p>
 
     </body>
 </html>
