--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Khan Acedmy, Wikipedia, and Us History.com-->
             <li><a href = "#emh">Early Mobile History</a></li>
         </ul>
         <h2 id='emh'>Early Mobile History </h2>
-                <p>Spanish explorers dicovered Mobile in the 1500s. At first the Spanish called Mobile Bay the Bay of the Holy Spirit. Mobile was discovered only 27 years after America was found by Christopher Columbus. Admiral Alvarez de Pineda became the first European to sail into Mobile Bay in 1516. It would take 20 years for a European to step in today's Alabama! <br><br> In beetween 1539 and 1541 explorer, Hernando De Soto, looked aroud the area and</p>
+                <p>Spanish explorers dicovered Mobile in the 1500s. At first the Spanish called Mobile Bay the Bay of the Holy Spirit. Mobile was discovered only 27 years after America was found by Christopher Columbus. Admiral Alvarez de Pineda became the first European to sail into Mobile Bay in 1516. It would take 20 years for a European to step in today's Alabama! <br><br> In beetween 1539 and 1541 explorer, Hernando De Soto, explored and, defeated the Indian city, Mauvilla, which is were today's Mobile get's its name. Te battle was against Chief Tuskaloosa </p>
 
     </body>
 </html>
