--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Websites I Used For Help:
-Khan Acedmy, Wikipedia, and Us History.com-->
+Khan Acedmy and MobileBayNeb.com-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -11,11 +11,14 @@ Khan Acedmy, Wikipedia, and Us History.com-->
                text-align:center;
            }
            body{
-               background-color:rgb(25, 148, 230);
+               background-color:rgb(25, 148, 320);
            }
           p{
-              font-family:cursive;
+              font-family:Cursive;
           }  
+		  .addd{
+		  	text-align:left;
+		  }
         </style>
     </head>
     <body>
@@ -24,7 +27,24 @@ Khan Acedmy, Wikipedia, and Us History.com-->
             <li><a href = "#emh">Early Mobile History</a></li>
         </ul>
         <h2 id='emh'>Early Mobile History </h2>
-                <p>Spanish explorers dicovered Mobile in the 1500s. At first the Spanish called Mobile Bay the Bay of the Holy Spirit. Mobile was discovered only 27 years after America was found by Christopher Columbus. Admiral Alvarez de Pineda became the first European to sail into Mobile Bay in 1516. It would take 20 years for a European to step in today's Alabama! <br><br> In beetween 1539 and 1541 explorer, Hernando De Soto, explored and, defeated the Indian city, Mauvila, which is were today's Mobile get's its name. The battle was against Chief Tuskaloosa and his people. They were stationed north of today's Mobile. Tuskaloosa was not killed or captured but almost everyone who lived in Mauvila was killed. Then, Tristán de Luna y Arellano and his crew landed in Mobile Bay in 1559 then a hurricane came and it destroyed their colony and their ships.<br><br> A french man named Pierre Le Moyne and his men were the first europeans to  </p>
+        <p>Spanish explorers dicovered Mobile in the 1500s. At first the Spanish called Mobile Bay the
+Bay of the Holy Spirit. Mobile was discovered only 27 years after America was found by Christopher
+	 Columbus. Admiral Alvarez de Pineda became the first European to sail into Mobile Bay in 1516. It would 
+		  take 20 years for a European to step in today's Alabama! </p>
+			<p> <br>In beetween 1539 and 1541 explorer, 
+	Hernando De Soto, explored and, defeated the Indian city, Mauvila, which is were today's Mobile get's its name.
+ The battle was against Chief Tuskaloosa and his people. They were stationed north of today's Mobile. Tuskaloosa 
+   was not killed or captured but almost everyone who lived in Mauvila was killed. Then, Tristán de Luna y Arellano and his
+				 crew landed in Mobile Bay in 1559 then a hurricane came and it destroyed their colony and their 
+					ships. </p>
+					<p> <br>A french man named Pierre
+					 Le Moyne and his men were the first europeans
+					  to to make a mark on Mobile.In the late 1600s, the french goverment was trying to make some
+					   settlementsand claim the mouth of the Mississippi River. When the Spanish leared the 
+					   french's plan they quickly went and cliamed the Pensacola Bay. After Iberville's first trip
+					   the French sent him agian and he made warehouses and port faculties on today's Dauphin Island
+					   . They did this because of how deep the water is. </p>
+
 
     </body>
 </html>
