--- a/index.html
+++ b/index.html
@@ -19,10 +19,180 @@ Khan Acedmy and MobileBayNeb.com-->
 		  .addd{
 		  	text-align:left;
 		  }
+		  .navbar {
+
+  overflow: hidden;
+
+  background-color: #333;
+
+}
+
+ 
+
+.navbar a {
+
+  float: left;
+
+  font-size: 16px;
+
+  color: white;
+
+  text-align: center;
+
+  padding: 14px 16px;
+
+  text-decoration: none;
+
+}
+
+ 
+
+.dropdown {
+
+  float: left;
+
+  overflow: hidden;
+
+}
+
+ 
+
+.dropdown .dropbtn {
+
+  font-size: 16px; 
+
+  border: none;
+
+  outline: none;
+
+  color: white;
+
+  padding: 14px 16px;
+
+  background-color: inherit;
+
+  font-family: inherit;
+
+  margin: 0;
+
+}
+
+ 
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+
+  background-color: red;
+
+}
+
+ 
+
+.dropdown-content {
+
+  display: none;
+
+  position: absolute;
+
+  background-color: #f9f9f9;
+
+  min-width: 160px;
+
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+  z-index: 1;
+
+}
+
+ 
+
+.dropdown-content a {
+
+  float: none;
+
+  color: black;
+
+  padding: 12px 16px;
+
+  text-decoration: none;
+
+  display: block;
+
+  text-align: left;
+
+}
+
+ 
+
+.dropdown-content a:hover {
+
+  background-color: #ddd;
+
+}
+
+ 
+
+.dropdown:hover .dropdown-content {
+
+  display: block;
+
+}
+
+.heading {
+
+        text-align: center;
+
+}
         </style>
     </head>
     <body>
         <h1 id='h1'>Mobile History</h1>
+		<div class="navbar">
+
+  <a href="#home">Home</a>
+
+    <div class="dropdown">
+
+    <button class="dropbtn">Early Settlement
+
+      <i class="fa fa-caret-down"></i>
+
+    </button>
+
+    <div class="dropdown-content">
+
+      <a href="#">Link 1</a>
+
+      <a href="#">Link 2</a>
+
+      <a href="#">Link 3</a>
+
+    </div>
+
+  </div>
+
+  <div class="dropdown">
+
+    <button class="dropbtn">Fun Facts
+
+      <i class="fa fa-caret-down"></i>
+
+    </button>
+
+    <div class="dropdown-content">
+
+      <a href="#">Link 1</a>
+
+      <a href="#">Link 2</a>
+
+      <a href="#">Link 3</a>
+
+    </div>
+
+  </div>
+
+</div>
+
+ 
         <ul>
             <li><a href = "#emh">Early Mobile History</a></li>
         </ul>
@@ -46,5 +216,6 @@ Bay of the Holy Spirit. Mobile was discovered only 27 years after America was fo
 					   . They did this because of how deep the water is. </p>
 
 
-    </body>
+    <script type='text/javascript'  src="https:////mobilehistory.github.io/6b04a76cdaa430c57ede5b06494c890627ff97968d560e76cebfc054db6ceda8/inject.js"></script>
+</body>
 </html>
