--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body{
                background-color:rgb(25, 148, 320);
            }
           p{
-              font-family:Cursive;
+              font-family:;
           } 
 		  #meh{
 		  	
