--- a/index.html
+++ b/index.html
@@ -74,11 +74,30 @@ Bay of the Holy Spirit. Mobile was discovered only 27 years after America was fo
   era. It was made when three farm towns meged together. Birmingham was named for Birmingham, England, UK. Birmingham
   became a industrial center, based on mining iron and making railroads. Most of the origanal founders of Birmingham 
   had English ancestry. </p>
-<h3>Birmingham Facts</h3>		 
+<h3>Birmingham Facts</h3>
+	
+
 <h2>Sorces</h2>
 
 <p>www.en.wikipedia.com<br>www.mobilebaynep.com </p>
+<h2>Sign In<h2>
+<form>
+Username:<input type="text" name="username"><br><br>
+Password:<input type="password" name="pwd"><br><br>
+<input type="submit" value="submit">
+</form>
+<h2>Create New Account</h2>
+<form>
+Firstname:<input type= "text" name="firstname" ><br><br>
+Lastname:<input type= "text" name="lastname" ><br><br>
+Email    :<input type= "text" name="mail" ><br><br>
 
+</form>
+<form>
+<input type ="radio" name= "gender" value="male">Male<br><br>
+<input type ="radio" name= "gender" value="female">Female<br><br>
+<input type="submit" value="submit">
+</form>
 
 
 </body>
